--- a/website/content/docs/use-cases.mdx
+++ b/website/content/docs/use-cases.mdx
@@ -8,7 +8,7 @@ description: >-
 
 # Use Cases
 
-Before understanding use cases, it's useful to know [what Vault is](/intro).
+Before understanding use cases, it's useful to know [what Vault is](https://learn.hashicorp.com/collections/vault/getting-started).
 This page lists some concrete use cases for Vault, but the possible use cases are
 much broader than what we cover.
 
