backport of commit bd4389a8b669d423dc91700827d9386e7f1f0c3f

--- a/website/content/docs/enterprise/fips/fips1402.mdx
+++ b/website/content/docs/enterprise/fips/fips1402.mdx
@@ -40,6 +40,10 @@ A non-exhaustive list of potential compliance issues include:
  - Using FF3-1/FPE in Transform Secrets Engine, or
  - Using a Derived Key (using HKDF) for Agent auto-authing or the Transit
    Secrets Engine.
+ - Using **Entropy Augmentation**: because BoringCrypto uses its internal,
+   FIPS 140-2 approved RNG, it cannot mix entropy from other sources.
+   Attempting to use EA with FIPS 140-2 HSM enabled binaries will result
+   in failures such as `panic: boringcrypto: invalid code execution`.
 
 Hashicorp can only provide general guidance regarding using Vault Enterprise
 in a FIPS-compliant manner. We are not a NIST-certified testing laboratory
@@ -55,12 +59,25 @@ from the following sources:
    container repository.
  - From the [AWS ECR `hashicorp/vault-enterprise-fips`](https://gallery.ecr.aws/hashicorp/vault-enterprise-fips)
    container repository.
+ - From the [Red Hat Access `hashicorp/vault-enterprise-fips`](https://catalog.redhat.com/software/containers/hashicorp/vault-enterprise-fips/628d50e37ff70c66a88517ea)
+   container repository.
 
 ~> **Note**: When pulling the FIPS UBI-based images, note that they are
    ultimately designed for OpenShift certification; consider either adding
    the `--user root --cap-add IPC_LOCK` options, to allow Vault to enable
    mlock, or use the `--env SKIP_SETCAP=1` option, to disable mlock
    completely, as appropriate for your environment.
+
+### Usage Restrictions
+
+Hashicorp **does not** support in-place migrations from non-FIPS Inside
+versions of Vault to FIPS Inside versions of Vault, regardless of version.
+A fresh cluster installation is required to receive support.
+
+Entropy Augmentation **does not** work with FIPS 140-2 Inside. The internal
+BoringCrypto RNG is FIPS 140-2 certified and does not accept entropy from
+other sources. Attempting to use Entropy Augmentation will result in failures
+at runtime such as `panic: boringcrypto: invalid code execution`.
 
 ## Technical Details
 
