use same link for postgres secrets

--- a/website/content/docs/secrets/databases/postgresql.mdx
+++ b/website/content/docs/secrets/databases/postgresql.mdx
@@ -17,10 +17,10 @@ Roles](/docs/secrets/databases#static-roles).
 See the [database secrets engine](/docs/secrets/databases) docs for
 more information about setting up the database secrets engine.
 
-The PostgreSQL secrets engine uses [pgx](https://pkg.go.dev/github.com/jackc/pgx/v4),
-the same database library as the [PostgreSQL storage backend](/docs/configuration/storage/postgresql).
-Connection string options, including SSL options, can be found in the [pgx library][pgxlib]
-and [PostgreSQL connection string][pg_conn_docs] documentation.
+The PostgreSQL secrets engine uses [pgx][pgxlib], the same database library as the
+[PostgreSQL storage backend](/docs/configuration/storage/postgresql). Connection string
+options, including SSL options, can be found in the [pgx][pgxlib] and
+[PostgreSQL connection string][pg_conn_docs] documentation.
 
 ## Capabilities
 
