Remove extra empty-string conditional

--- a/website/content/docs/agent/template.mdx
+++ b/website/content/docs/agent/template.mdx
@@ -68,7 +68,7 @@ To fetch the issuing CA for this mount, use:
 
 ```
 {{- with secret "pki/cert/ca" -}}
-{{ "" | or ( .Data.certificate ) }}
+{{ .Data.certificate }}
 {{- end -}}
 ```
 
